Agrega solicitudes, asignaciones y mejoras de inventario